<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/informacoes"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/aa"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/nome_do_cartao"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_cvc"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/finalizar_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_cartao"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>